[Qt][WK2] WebKitTestRunner should use 480x360 sized view for W3C SVG tests https://bugs.webkit.org/show_bug.cgi?id=76546

Patch by Szilard Ledan <Ledan-Muntean.Szilard@stud.u-szeged.hu> on 2012-02-15
Reviewed by Simon Hausmann.

Resize the web view programatically because the declarative property binding
does not work. Seems like our qml environment is not initialized fully but it
needs more investigation.

* WebKitTestRunner/qt/PlatformWebViewQt.cpp:
(WTR::WrapperWindow::handleStatusChanged):
(WTR::PlatformWebView::resizeTo):

Canonical link: https://commits.webkit.org/95704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107868 268f45cc-cd09-0410-ab3c-d52691b4dbfc