Tools/WebKitTestRunner/qt/PlatformWebViewQt.cpp
@@ -55,10 +55,14 @@ private slots:
             return;
 
         setGeometry(0, 0, 800, 600);
+        m_view->setX(0);
+        m_view->setY(0);
+        m_view->setWidth(800);
+        m_view->setHeight(600);
+
         setResizeMode(QQuickView::SizeRootObjectToView);
 
         m_view->setParentItem(rootObject());
-        QDeclarativeProperty::write(m_view, "anchors.fill", qVariantFromValue(rootObject()));
 
         QWindowSystemInterface::handleWindowActivated(this);
         m_view->page()->setFocus(true);
@@ -88,6 +92,8 @@ PlatformWebView::~PlatformWebView()
 void PlatformWebView::resizeTo(unsigned width, unsigned height)
 {
     m_window->resize(width, height);
+    m_view->setWidth(width);
+    m_view->setHeight(height);
 }
 
 WKPageRef PlatformWebView::page()
